@@ -318,6 +318,7 @@ enum AVCodecID {
     AV_CODEC_ID_PHM,
     AV_CODEC_ID_RADIANCE_HDR,
     AV_CODEC_ID_WBMP,
+    AV_CODEC_ID_MEDIA100,
 
     /* various PCM "codecs" */
     AV_CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
