@@ -15,6 +15,7 @@ version <next>:
 - Micronas SC-4 audio decoder
 - LAF demuxer
 - APAC decoder and demuxer
+- Media 100i decoders
 
 
 version 5.1:
